--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                 <p class="message-author paris8"><span></span>Kimberley-Doloress</p>
                 <div class="message-text">
                   <p>Voici une infographie qui illustre les différences entre les deux plateformes.</p>
-                  <p><img src="img/parcoursup-apb.png" /></p>
+                  <p><img src="https://static.mediapart.fr/files/2018/04/17/img/parcoursup-apb.png" /></p>
                 </div>
             </div>
         </div>
@@ -413,7 +413,7 @@
             <div class="bubble bubble-text">
                 <p class="message-author observatoire">Observatoire des inégalités
                 <div class="message-text">Comme nous l’avons montré dans <a href='https://www.inegalites.fr/Les-milieux-populaires-largement-sous-representes-dans-l-enseignement-superieur' target='_blank'>notre rapport publié en septembre 2017</a>, les inégalités se perçoivent plus selon les filières. En BTS et en IUT, la représentation de la population est proche de la réalité (0,7 enfant de cadre pour un enfant d’ouvrier).  C’est à l’université que l’écart commence à se creuser&nbsp;: les enfants d’ouvriers sont trois fois moins présents que les enfants de cadres. Et ça dépend aussi du niveau d’études.</p>
-                <p><img src="img/etudiants-ouvriers.jpg"/></p>
+                <p><img src="https://static.mediapart.fr/files/2018/04/17/img/etudiants-ouvriers.jpg"/></p>
                 </div>
             </div>
         </div>
