--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 
         <div class="message message-in">
             <div class="bubble bubble-text">
-                <p class="message-author gouvernement">Usul
+                <p class="message-author chroniqueur">Usul
                     <br><span>Chroniqueur à Mediapart</span></p>
                 <div class="message-text">À la fac, y a pas beaucoup d’enfants de classes aisées. La sélection, avec les «&nbsp;attendus&nbsp;», va écarter le peu d’enfants d’ouvriers et la fac va devenir une école d'excellence. </div>
                 <br>
