--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                 <p class="message-author paris8"><span></span>Kimberley-Doloress</p>
                 <div class="message-text">
                   <p>Voici une infographie qui illustre les différences entre les deux plateformes.</p>
-                  <p><img src="https://static.mediapart.fr/files/2018/04/17/parcoursup-apb.png" /></p>
+                  <p><img src="https://i.imgur.com/Bz5hnzY.png" /></p>
                 </div>
             </div>
         </div>
