--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <meta charset="utf-8">
 <title>Réforme de l'université</title>
 <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
-<script src="js/jquery-3.3.1.js"></script>
 </head>
 <body>
 <div class="objet-multimedia">
     <div class="remodal"></div>
     <div id="messenger" class="clearfix">
       <div class="title">
-          <span class="title">La loi «&nbsp;Orientation et réussite des étudiants&nbsp;» disséquée</span>
+          <span class="title">La loi «&nbsp;orientation et réussite des étudiants&nbsp;» disséquée</span>
       </div>
         <div class="message message-system tt3">
             <span class="message-system-body">Le pourquoi de la réforme</span>
@@ -334,7 +333,7 @@
                 <p class="message-author paris8"><span></span>Kimberley-Doloress</p>
                 <div class="message-text">
                   <p>Voici une infographie qui illustre les différences entre les deux plateformes.</p>
-                  <p><img src="https://i.imgur.com/Bz5hnzY.png" /></p>
+                  <p><img src="img/parcoursup-apb.png" /></p>
                 </div>
             </div>
         </div>
@@ -367,6 +366,24 @@
 
         <div class="message message-system tt3">
             <span class="message-system-body">Contre la réforme, une forte mobilisation</span>
+        </div>
+
+        <div class="message message-out">
+            <div class="bubble bubble-text">
+                <p class="message-author opinion">L’opinion</p>
+                <div class="message-text">Comment s’organisent les étudiants, ceux qui se mobilisent contre cette réforme ?</div>
+            </div>
+        </div>
+
+        <div class="message message-in paris8">
+            <div class="bubble bubble-text">
+                <p class="message-author paris8"><span></span>Maïwenn</p>
+                <div class="message-text">
+                  <p>La plupart se rendent en manifestation pour s’exprimer. Afin de faire <em>«&nbsp;convergence des luttes&nbsp;»</em>. Les jeunes rejoignent les autres secteurs en grève, notamment les cheminots, et vice-versa&nbsp;: cela donne de l’ampleur à la mobilsiation. Une dizaine d’universités sont aussi bloquées partout en France, dans le but de faire plier au plus vite le gouvernement sur la loi « orientation et réussite des étudiants ».</p>
+                  <br>
+                  <p><iframe src='https://dntnht.github.io/slideshow/' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe></p>
+                </div>
+            </div>
         </div>
 
         <div class="message message-system tt3">
@@ -413,7 +430,7 @@
             <div class="bubble bubble-text">
                 <p class="message-author observatoire">Observatoire des inégalités
                 <div class="message-text">Comme nous l’avons montré dans <a href='https://www.inegalites.fr/Les-milieux-populaires-largement-sous-representes-dans-l-enseignement-superieur' target='_blank'>notre rapport publié en septembre 2017</a>, les inégalités se perçoivent plus selon les filières. En BTS et en IUT, la représentation de la population est proche de la réalité (0,7 enfant de cadre pour un enfant d’ouvrier).  C’est à l’université que l’écart commence à se creuser&nbsp;: les enfants d’ouvriers sont trois fois moins présents que les enfants de cadres. Et ça dépend aussi du niveau d’études.</p>
-                <p><img src="https://static.mediapart.fr/files/2018/04/17/etudiants-ouvriers.jpg"/></p>
+                <p><img src="img/etudiants-ouvriers.jpg"/></p>
                 </div>
             </div>
         </div>
@@ -466,7 +483,7 @@
 
         <div class="message message-in">
             <div class="bubble bubble-text">
-                <p class="message-author chroniqueur">Usul
+                <p class="message-author gouvernement">Usul
                     <br><span>Chroniqueur à Mediapart</span></p>
                 <div class="message-text">À la fac, y a pas beaucoup d’enfants de classes aisées. La sélection, avec les «&nbsp;attendus&nbsp;», va écarter le peu d’enfants d’ouvriers et la fac va devenir une école d'excellence. </div>
                 <br>
