--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ https://actu.fr/grand-est/nancy_54395/etudiants-etrangers-nancy-ministre-refuse-
         <div class="message-text">
 		  <p>Depuis l’annonce de cette réforme le 19 novembre dernier par Édouard Philippe, plusieurs universités ont fait part de leur mécontentement. Et la liste des facs qui ont même décidé de boycotter cette décision à la rentrée 2019 s'allonge… Elles sont en tout une dizaine à s'opposer au décret. </p>
 		  <p>&nbsp;</p>
-	  <p><img src="https://i.imgur.com/bTgQuvp.png" width="504" height="515"/></p></div>
+	  <p><img src="https://i.imgur.com/bTgQuvp.png"/></p></div>
         </div>
 </div>
 
@@ -270,7 +270,7 @@ https://actu.fr/grand-est/nancy_54395/etudiants-etrangers-nancy-ministre-refuse-
 		<p>Il y a également des facs qui ont été perturbées en décembre dernier, comme celle de Rennes 2 qui a été totalement bloquée. 
 	</p>
 		<p>&nbsp; </p>
-	  <p><img src="https://i.imgur.com/jvoorxf.jpg" width="523" height="231"/></p>
+	  <p><img src="https://i.imgur.com/jvoorxf.jpg"/></p>
 	  <p>&nbsp;</p>
       </div>
 		
@@ -300,7 +300,7 @@ https://actu.fr/grand-est/nancy_54395/etudiants-etrangers-nancy-ministre-refuse-
 		<p>On compte encore une fois regagner la rue, susciter des témoignages d’étudiants étrangers, informer par des assemblées générales, et mettre la pression sur les présidences des universités. 
 	</p>
 		<p>&nbsp; </p>
-		<p><img src="https://i.imgur.com/ixVRrV5.jpg" width="554" height="257"/></p>
+		<p><img src="https://i.imgur.com/ixVRrV5.jpg"/></p>
 		<p>&nbsp;</p>
         </div>
     </div>
