--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ https://actu.fr/grand-est/nancy_54395/etudiants-etrangers-nancy-ministre-refuse-
         <div class="message-text">
 		<p>Nous avons décidé de lancer une <a target="_blank" href="https://www.change.org/p/non-à-l-augmentation-des-frais-d-inscription-pour-les-étudiant-e-s-étranger-e-s">pétition</a>, « Non à l'augmentation des frais d'inscription pour les étudiant.e.s étranger.e.s !”) », elle a déjà dépassé les 300&nbsp;000 signatures. ✔️</p>
 		<p>&nbsp; </p>
-	  <p><img src="https://i.imgur.com/Kfky0ON.jpg" width="457" height="273"/></p></div>
+	  <p><img src="https://i.imgur.com/Kfky0ON.jpg"/></p></div>
     </div>
 </div>
 
