--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ https://actu.fr/grand-est/nancy_54395/etudiants-etrangers-nancy-ministre-refuse-
         <p class="message-author etudiant">Département cinéma
       <br><span>Université Paris 8</span></p>
         <div class="message-text">La possibilité de venir étudier en France est une chance et une opportunité, vous pouvez le voir à travers ces témoignages d’étudiants étrangers de Paris 8. Et si la France applique ce plan, elle fera face à beaucoup de désillusions.
-          <p><iframe src="https://player.vimeo.com/video/310725703" width="640" height="360" frameborder="0" allowfullscreen></iframe></p>
+          <p><iframe src="https://player.vimeo.com/video/310725703" width="100%" height="360" frameborder="0" allowfullscreen></iframe></p>
         </div>
 
         </div>
